--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "@types/react": "19.0.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
